# rt1w

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  event.cpp  event.hpp  hitable.hpp  hitablelist.cpp  hitablelist.hpp  main.cpp  material.cpp  material.hpp  ray.cpp  ray.hpp  sphere.cpp  sphere.hpp  sptr.hpp  sync.c  sync.cpp  sync.h  tile.h  types.h  vec.cpp  vec.hpp  wqueue.cpp  wqueue.hpp
include/rt1w/: accelerator.hpp  arena.hpp  bvh.hpp  bxdf.hpp  camera.hpp  context.hpp  denoise.hpp  efloat.hpp  error.h  event.hpp  fresnel.hpp  geometry.hpp  image.hpp  integrator.hpp  interaction.hpp  light.hpp  material.hpp  mesh.hpp  params.hpp  primitive.hpp  ray.hpp  rng.hpp  sampler.hpp  sampling.hpp  scene.hpp  shape.hpp  spectrum.hpp  sphere.hpp  sync.h  task.hpp  texture.hpp  transform.hpp  types.h  utils.hpp  value.hpp  workq.hpp
scenes/: cornell.json  earth-arealight.json  earth-pointlight.json  earth.json  light.json  simple.json
src/: arena.cpp  arena.hpp  bvh.cpp  bvh.hpp  bxdf.cpp  bxdf.hpp  camera.cpp  camera.hpp  context.cpp  context.hpp  denoise.cpp  denoise.hpp  efloat.hpp  error.cpp  error.h  event.cpp  event.hpp  fresnel.cpp  fresnel.hpp  geometry.hpp  hitable.cpp  hitable.hpp  hitablelist.cpp  hitablelist.hpp  image.cpp  image.hpp  imageio.c  imageio.h  integrator.cpp  integrator.hpp  interaction.hpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  params.cpp  params.hpp  (+37 more)
src/accelerators/: bvh.cpp  bvh.hpp  bvhbuilder.cpp  bvhbuilder.hpp  qbvh.cpp  qbvh.hpp
src/core/: accelerator.cpp  arena.cpp  bvh.cpp  bxdf.cpp  camera.cpp  context.cpp  denoise.cpp  error.cpp  event.cpp  fresnel.cpp  geometry.cpp  image.cpp  imageio.c  integrator.cpp  interaction.cpp  light.cpp  material.cpp  mesh.cpp  params.cpp  primitive.cpp  ray.cpp  rng.cpp  sampler.cpp  sampling.cpp  scene.cpp  shape.cpp  spectrum.cpp  sphere.cpp  sptr.cpp  sync.c  task.cpp  texture.cpp  transform.cpp  utils.cpp  value.cpp  workq.cpp
src/integrators/: path.cpp  path.hpp  whitted.cpp  whitted.hpp
src/main/: rt1w.cpp
src/shapes/: mesh-priv.hpp  mesh.cpp  mesh.hpp  sphere.cpp  sphere.hpp
src/tools/: loader_obj.cpp
test/: CMakeLists.txt  accelerator.cpp  camera.cpp  efloat.cpp  geometry.cpp  ray-shape.cpp  sampling.cpp
